--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,24 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>SuperheroV4</artifactId>
+    <artifactId>SuperheroV5</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SuperheroV4</name>
-    <description>SuperheroV4</description>
+    <name>SuperheroV5</name>
+    <description>SuperheroV5</description>
     <properties>
         <java.version>19</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -24,9 +34,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
